@startuml TurnManager

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 30

title Diagram Kelas TurnManager

enum TurnPhase {
    START
    PRE_ROLL
    POST_ROLL
    AWAITING_ACTION
    END
}

enum JailAction {
    PAY_FINE
    USE_CARD
    ROLL_DICE
}

class TurnManager {
    - game : Game*
    - logger : TransactionLogger*
    - phase : TurnPhase
    - hasActed : bool
    - shieldActive : bool
    __
    + TurnManager(game : Game*, logger : TransactionLogger*)
    + startTurn(player : Player&) : void
    + endTurn(player : Player&) : void
    + canRoll(player : const Player&) : bool
    + canUseSkill(player : const Player&) : bool
    + canSave() : bool
    + processMovement(player : Player&, diceTotal : int) : Tile*
    + handleDoubleResult(player : Player&, isDouble : bool) : bool
    + handleJailTurn(player : Player&, gui : IGUI*) : JailAction
    + isShieldActive() : bool
    + activateShield() : void
    + getPhase() : TurnPhase
    + markActed() : void
    + distributeSkillCard(player : Player&) : void
    + handleDropCard(player : Player&, gui : IGUI*) : void
    + decrementFestivalDurations(player : Player&) : void
}

' Kelas yang direferensi
class Game <<Engine>> {
    + getBoard() : Board*
    + getSkillDeck() : CardDeck<SkillCard>*
    + getGoSalary() : int
    + getJailFine() : int
}

class TransactionLogger <<Data>> {
    + log(turn, username, actionType, detail) : void
}

' Kelas Model yang dipanggil method-nya
class Player <<Model>> {
    + startTurn() : void
    + markRolled() : void
    + hasRolled() : bool
    + hasUsedSkill() : bool
    + move(steps, boardSize) : int
    + setPosition(pos) : void
    + getPosition() : int
    + isJailed() : bool
    + getOwnedProperties() : vector<Property*>
    + getHand() : vector<SkillCard*>
    + addCardToHand(card) : void
    + removeCardFromHand(index) : void
    + addMoney(amount) : void
}

class Board <<Model>> {
    + getNextIndex(current, steps) : int
    + passesGo(from, steps) : bool
    + getTile(index) : Tile*
    + getSize() : int
}

class Property <<Model>> {
    + decrementFestivalDuration() : void
}

interface IGUI <<interface>> {
    + getChoice(prompt, options) : int
}

' Relasi
TurnManager --> Game : references >
TurnManager --> TransactionLogger : references >
TurnManager ..> TurnPhase : uses >
TurnManager ..> JailAction : returns >
TurnManager ..> Player : calls methods on >
TurnManager ..> Board : via game.getBoard() >
TurnManager ..> Property : via player.getOwnedProperties() >
TurnManager ..> IGUI : for drop card input >

note right of TurnManager
    <b>Mengelola siklus hidup satu giliran</b>

    <b>TIDAK duplikasi state Player!</b>
    State berikut dibaca dari Player:
    · hasRolled(), hasUsedSkill()
    · consecutiveDoubles, jailAttempts

    TurnManager hanya menyimpan:
    · phase → fase giliran (khusus engine)
    · hasActed → untuk validasi SIMPAN
    · shieldActive → efek ShieldCard

    <b>startTurn(player):</b>
    1. player.startTurn() → reset flag
    2. distributeSkillCard(player) → draw dari skillDeck
    3. handleDropCard() → jika hand > 3
    4. decrementFestivalDurations(player)
    5. phase = PRE_ROLL

    <b>canRoll(player):</b>
    return !player.hasRolled()

    <b>canUseSkill(player):</b>
    return !player.hasRolled() && !player.hasUsedSkill()

    <b>canSave():</b>
    return !hasActed

    <b>processMovement(player, diceTotal):</b>
    1. newPos = board.getNextIndex(pos, total)
    2. if board.passesGo() → player += goSalary
    3. player.setPosition(newPos)
    4. return board.getTile(newPos)
end note

@enduml
